// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 86,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "counting",
          "text": "{1} {2} {2} 3",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 119,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": {
          "*": {
            "*": {
              "*": {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": {
              "*": {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": {
              "*": {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 37,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          null,
        ],
        "t": {
          "0": {
            "desc": "counting",
            "text": "a {2} {2} 3",
          },
          "1": {
            "desc": "counting",
            "text": "b {2} {2} 3",
          },
        },
      },
      "line_beg": 3,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "great",
          "text": "testing {it} works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 19,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "ok",
          "text": "simple",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 49,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "well",
          "text": "{it} still works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes when needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "babelNode": Node {
              "attributes": [
                Node {
                  "end": 119,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 36,
                      "index": 119,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 15,
                      "index": 98,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 107,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 24,
                        "index": 107,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 15,
                        "index": 98,
                        "line": 4,
                      },
                    },
                    "name": "className",
                    "start": 98,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 98,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 119,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 36,
                        "index": 119,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 25,
                        "index": 108,
                        "line": 4,
                      },
                    },
                    "start": 108,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 151,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 68,
                      "index": 151,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 37,
                      "index": 120,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 124,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 41,
                        "index": 124,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 37,
                        "index": 120,
                        "line": 4,
                      },
                    },
                    "name": "href",
                    "start": 120,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 120,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 151,
                    "extra": {
                      "raw": ""https://somewhere.random"",
                      "rawValue": "https://somewhere.random",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 68,
                        "index": 151,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 42,
                        "index": 125,
                        "line": 4,
                      },
                    },
                    "start": 125,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "https://somewhere.random",
                  },
                },
                Node {
                  "end": 166,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 83,
                      "index": 166,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 69,
                      "index": 152,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 160,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 77,
                        "index": 160,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 69,
                        "index": 152,
                        "line": 4,
                      },
                    },
                    "name": "tabindex",
                    "start": 152,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 152,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 166,
                    "expression": Node {
                      "end": 165,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 82,
                          "index": 165,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 79,
                          "index": 162,
                          "line": 4,
                        },
                      },
                      "start": 162,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 83,
                        "index": 166,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 78,
                        "index": 161,
                        "line": 4,
                      },
                    },
                    "start": 161,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 178,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 95,
                      "index": 178,
                      "line": 4,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 84,
                      "index": 167,
                      "line": 4,
                    },
                  },
                  "name": Node {
                    "end": 169,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 86,
                        "index": 169,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 84,
                        "index": 167,
                        "line": 4,
                      },
                    },
                    "name": "id",
                    "start": 167,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 167,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 178,
                    "expression": Node {
                      "end": 177,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 94,
                          "index": 177,
                          "line": 4,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 88,
                          "index": 171,
                          "line": 4,
                        },
                      },
                      "start": 171,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 95,
                        "index": 178,
                        "line": 4,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 87,
                        "index": 170,
                        "line": 4,
                      },
                    },
                    "start": 170,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 179,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 96,
                  "index": 179,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 12,
                  "index": 95,
                  "line": 4,
                },
              },
              "name": Node {
                "end": 97,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 14,
                    "index": 97,
                    "line": 4,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 13,
                    "index": 96,
                    "line": 4,
                  },
                },
                "name": "a",
                "start": 96,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 95,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "https://somewhere.random",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 10,
      "col_end": 16,
      "filepath": "test.js",
      "hashToLeaf": {
        "6CzFRF22gqmcMT9hNd4lFQ==": {
          "desc": "some desc",
          "text": "This is a {=link}",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 16,
      "filepath": "test.js",
      "hashToLeaf": {
        "vInz7SvwK8Zthis7azxV9Q==": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "line_beg": 4,
      "line_end": 6,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes where there are two nested React elements 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "param",
        },
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
            {
              "children": [
                {
                  "type": "text",
                },
                {
                  "type": "plural",
                },
                {
                  "type": "text",
                },
              ],
              "phraseIndex": 2,
              "type": "implicitParam",
              "wrapperNode": {
                "babelNode": Node {
                  "attributes": [],
                  "end": 320,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 20,
                      "index": 320,
                      "line": 8,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 312,
                      "line": 8,
                    },
                  },
                  "name": Node {
                    "end": 319,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 19,
                        "index": 319,
                        "line": 8,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 313,
                        "line": 8,
                      },
                    },
                    "name": "strong",
                    "start": 313,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 312,
                  "trailingComments": undefined,
                  "type": "JSXOpeningElement",
                },
                "props": {},
                "type": "strong",
              },
            },
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "babelNode": Node {
              "attributes": [
                Node {
                  "end": 262,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 34,
                      "index": 262,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 13,
                      "index": 241,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 250,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 22,
                        "index": 250,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 241,
                        "line": 7,
                      },
                    },
                    "name": "className",
                    "start": 241,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 241,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 262,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 34,
                        "index": 262,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 23,
                        "index": 251,
                        "line": 7,
                      },
                    },
                    "start": 251,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                Node {
                  "end": 271,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "index": 271,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 35,
                      "index": 263,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 267,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 39,
                        "index": 267,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 35,
                        "index": 263,
                        "line": 7,
                      },
                    },
                    "name": "href",
                    "start": 263,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 263,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 271,
                    "extra": {
                      "raw": ""#"",
                      "rawValue": "#",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 43,
                        "index": 271,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 40,
                        "index": 268,
                        "line": 7,
                      },
                    },
                    "start": 268,
                    "trailingComments": undefined,
                    "type": "StringLiteral",
                    "value": "#",
                  },
                },
                Node {
                  "end": 286,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 58,
                      "index": 286,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 44,
                      "index": 272,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 280,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 52,
                        "index": 280,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 44,
                        "index": 272,
                        "line": 7,
                      },
                    },
                    "name": "tabindex",
                    "start": 272,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 272,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 286,
                    "expression": Node {
                      "end": 285,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 57,
                          "index": 285,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 54,
                          "index": 282,
                          "line": 7,
                        },
                      },
                      "start": 282,
                      "trailingComments": undefined,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 58,
                        "index": 286,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 53,
                        "index": 281,
                        "line": 7,
                      },
                    },
                    "start": 281,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
                Node {
                  "end": 298,
                  "innerComments": undefined,
                  "leadingComments": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 70,
                      "index": 298,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 59,
                      "index": 287,
                      "line": 7,
                    },
                  },
                  "name": Node {
                    "end": 289,
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 61,
                        "index": 289,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 59,
                        "index": 287,
                        "line": 7,
                      },
                    },
                    "name": "id",
                    "start": 287,
                    "trailingComments": undefined,
                    "type": "JSXIdentifier",
                  },
                  "start": 287,
                  "trailingComments": undefined,
                  "type": "JSXAttribute",
                  "value": Node {
                    "end": 298,
                    "expression": Node {
                      "end": 297,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "innerComments": undefined,
                      "leadingComments": undefined,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 69,
                          "index": 297,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 63,
                          "index": 291,
                          "line": 7,
                        },
                      },
                      "start": 291,
                      "trailingComments": undefined,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "innerComments": undefined,
                    "leadingComments": undefined,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 70,
                        "index": 298,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 62,
                        "index": 290,
                        "line": 7,
                      },
                    },
                    "start": 290,
                    "trailingComments": undefined,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 299,
              "innerComments": undefined,
              "leadingComments": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 71,
                  "index": 299,
                  "line": 7,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 238,
                  "line": 7,
                },
              },
              "name": Node {
                "end": 240,
                "innerComments": undefined,
                "leadingComments": undefined,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 12,
                    "index": 240,
                    "line": 7,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 11,
                    "index": 239,
                    "line": 7,
                  },
                },
                "name": "a",
                "start": 239,
                "trailingComments": undefined,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 238,
              "trailingComments": undefined,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "#",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
        {
          "type": "text",
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "hashToLeaf": {
        "PqPPir8Kg9xSlqdednPFOg==": {
          "desc": "example 1",
          "text": "{name} has shared {=a photo} with you",
        },
        "gVKMc/8jq5vnYR5v2bb32g==": {
          "desc": "example 1",
          "text": "{name} has shared {=[number] photos} with you",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "example 1",
              "text": "{name} has shared {=[number] photos} with you",
              "tokenAliases": {
                "=[number] photos": "=m2",
              },
            },
            "_1": {
              "desc": "example 1",
              "text": "{name} has shared {=a photo} with you",
              "tokenAliases": {
                "=a photo": "=m2",
              },
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 18,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 14,
      "filepath": "test.js",
      "hashToLeaf": {
        "2u1unDTClahYJKZKS5RVCQ==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{=[number] photos}",
        },
        "dO3IlAx8hzcJVQxeQOUhkg==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "{=a photo}",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{=[number] photos}",
              "tokenAliases": {
                "=[number] photos": "=m1",
              },
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "{=a photo}",
              "tokenAliases": {
                "=a photo": "=m1",
              },
            },
          },
        },
      },
      "line_beg": 7,
      "line_end": 16,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 21,
      "filepath": "test.js",
      "hashToLeaf": {
        "Q9mOAQ+ogHG20z2QkEkNmQ==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "a photo",
        },
        "tYYOLLMbffdJQQlSVEVv/A==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{number} photos",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{number} photos",
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "a photo",
            },
          },
        },
      },
      "line_beg": 8,
      "line_end": 15,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should create correct child parent mapping for multiple files 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
    "4": 3,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=bold with italic inside}.",
          "tokenAliases": {
            "=bold with italic inside": "=m2",
          },
        },
      },
      "line_beg": 3,
      "line_end": 8,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=bold with italic inside}."",
          "text": "bold with {=italic inside}",
          "tokenAliases": {
            "=italic inside": "=m1",
          },
        },
      },
      "line_beg": 5,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 26,
      "col_end": 46,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a bold with {=italic inside}."",
          "text": "italic inside",
        },
      },
      "line_beg": 6,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "Link: {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 3,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 57,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Link: {=link}"",
          "text": "link",
        },
      },
      "line_beg": 5,
      "line_end": 5,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 6,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          null,
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "desc...",
              "text": "There are {number} photos.",
            },
          },
          "_1": {
            "_1": {
              "desc": "desc...",
              "text": "There is 1 photo.",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 9,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the outer token names if needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Expose outer token name when script option is given",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "outerTokenName": "=World",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the subject option on top level and inner phrases 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "expose subject",
            "text": "You {=see the world}",
            "tokenAliases": {
              "=see the world": "=m1",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
      "subject": Node {
        "end": 80,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 80,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 72,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
    {
      "col_beg": 10,
      "col_end": 30,
      "filepath": "test.js",
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "In the phrase: "You {=see the world}"",
            "text": "see the world",
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
      "subject": Node {
        "end": 80,
        "innerComments": undefined,
        "leadingComments": undefined,
        "loc": SourceLocation {
          "end": Position {
            "column": 52,
            "index": 80,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": "aSubject",
          "start": Position {
            "column": 44,
            "index": 72,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "trailingComments": undefined,
        "type": "Identifier",
      },
    },
  ],
}
`;

exports[`collectFbt should extract common strings from <fbt common={true}> 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 39,
      "common": true,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbs strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 23,
      "common": true,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": {},
        },
      },
      "line_beg": 3,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 16,
      "col_end": 38,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}!"",
          "outerTokenName": "=World",
          "text": "World",
          "tokenAliases": {},
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract the author from Docblock 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "author": "Sponge Bob",
      "col_beg": 0,
      "col_end": 25,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should not expose the outer token names by default 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Do not expose outer token name by default",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 40,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 25,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "fbtElementNodes": undefined,
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 46,
      "filepath": "test.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;
